Asiakkaan muuttaminen lisätty

--- a/AsiakkaatNeljas/WebContent/css/main.css
+++ b/AsiakkaatNeljas/WebContent/css/main.css
@@ -28,6 +28,12 @@ table th {
     text-align: left;
 }
 
+.poista {
+	color: red;
+	text-decoration: underline;
+	cursor: pointer;
+}
+
 input[type=text] {
     width: 95%;
 }
